# qcongen

./: .gitignore  LICENSE  README.md  hatch.toml  log.txt  pyproject.toml  requirements.txt  setup.py
input/: batch_config_example.json  comparison_config_example_1020.json  comparison_config_example_124014.json  comparison_config_example_124015.json  comparison_config_example_825.json  config_example.json  random_config_example.json
input/set_partition_mps/: problem10_40.mps  problem15_60.mps  problem30_100.mps  problem5_6.mps
results/20250223_171204/instance_1/: random_1.mps
results/20250223_171204/instance_2/: random_2.mps
results/20250223_171204/instance_3/: random_3.mps
results/20250223_171204/instance_4/: random_4.mps
results/20250223_171204/instance_5/: random_5.mps
results/20250223_171204/instance_6/: random_6.mps
results/20250223_171300/instance_1/: random_1.mps
results/20250223_171300/instance_10/: random_10.mps
results/20250223_171300/instance_2/: random_2.mps
results/20250223_171300/instance_3/: random_3.mps
results/20250223_171300/instance_4/: random_4.mps
results/20250223_171300/instance_5/: random_5.mps
results/20250223_171508/: average_results.txt  comparison_data.csv
results/20250223_174226/: average_results.txt  comparison_data.csv
results/20250224_103114/: random_example.mps
results/20250224_112054/: random_example.mps
results/20250224_112153/: random_example.mps
results/20250224_112251/: random_example.mps
results/20250224_130649/: random_example.mps
results/20250224_131031/: random_example.mps
results/20250224_135850/: random_example.mps
results/20250224_140324/: random_example.mps
results/20250224_140351/: random_example.mps
results/20250224_140425/: random_example.mps
results/20250224_151323/: average_results.txt  comparison_data.csv
results_collect/20250223_162149_15_realsim/: random_example.mps
results_collect/20250223_173055_ref5/: average_results.txt  comparison_data.csv
results_plots/: average_solution_value_table.tex  feasible_solutions_table.tex
results_plots/20250223_182000_124014/: average_results.txt  comparison_data.csv
results_plots/20250223_185611_1020/: average_results.txt  comparison_data.csv
results_plots/20250224_155245_124015/: average_results.txt  comparison_data.csv
results_plots/20250224_165648_825/: average_results.txt  comparison_data.csv
src/qcongen/: __main__.py  cli.py  config.py
(+603 files in other folders)
